--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
 
-    <title>branmart</title>
+    <title>Branmart</title>
   </head>
   <body>
     <div id="root"></div>
